--- a/manifests/deploy-session.yaml
+++ b/manifests/deploy-session.yaml
@@ -1,15 +1,18 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: microservice-session-sample
+  name: microservice-session-deployment
   labels:
-    app: microprofile-app
+    app: micropservice-session
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: microservice-session
   template:
     metadata:
       labels:
-        name: session-deployment
+        app: microservice-session
     spec:
       containers:
       - name: microservice-session
@@ -22,15 +25,15 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: session-service
+  name: microservice-session-service
   annotations:
     mpmetrics: 'true'
   labels:
-    app: microprofile-app
+    app: microservice-session
 spec:
   clusterIP: None
   ports:
     - port: 9080
       targetPort: 9080
   selector:
-    name: session-deployment
+    app: microservice-session
